--- a/_site.yml
+++ b/_site.yml
@@ -5,7 +5,7 @@ navbar:
   left:
     - text: "Research"
       href: research.html
-    - text: "Outreach"
+    - text: "News"
       href: outreach.html      
     - text: "Tutorial"
       href: tutorial.html  
